syntax = "proto3";
package comdex.collector.v1beta1;

import "gogoproto/gogo.proto";
import "comdex/collector/v1beta1/collector.proto";

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/comdex-official/comdex/x/collector/types";

message LookupTableParams {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  repeated CollectorLookupTable lookupTableData = 3 [(gogoproto.nullable) = false];
}

message AuctionControlByAppIdProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  CollectorAuctionLookupTable collectorAuctionLookupTable = 3 [(gogoproto.nullable) = false];
}